--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-
+  "json.validate.enable": false,  //temporary disable as tasks.json yields error on "fileLocation": ["relative", "${workspaceFolder}/build" ]
   "ego.power-tools": {
     "commands": {
       "otx.preLaunch": {
